--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+     <!-- Favicons
+ ================================================== -->
+ <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+ <link rel="apple-touch-icon" href="">
+ <link rel="apple-touch-icon" sizes="72x72" href="">
+ <link rel="apple-touch-icon" sizes="114x114" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="Maja-Karin Fredriksson">
+    <meta name="robots" content="noodp">
+    <link rel="canonical" href="">
+<meta name="description" content="">
+<meta name="author" content="Jag Begär Bara Havet">
+<meta property="og:url" content="http://majakarinfredriksson.com/" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Maja-Karin Fredriksson" />
+<meta property="og:description" content="Jag Begär Bara Havet" />
+<meta property="og:image" content="http://majakarinfredriksson.com/img/majakarinfredriksson-fb.jpg" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:title" content="Maja-Karin Fredriksson">
+    <meta property="og:description" content="Maja-Karin Fredriksson">
+    <meta property="og:url" content="">
+    <meta property="og:site_name" content="Maja-Karin Fredriksson">
+    <meta property="og:image:width" content="1267">
+    <meta property="og:image:height" content="200">
+
+    <!-- Favicons
+    ================================================== -->
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-touch-icon-114x114.png">
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" sizes="192x192">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Trykker" rel="stylesheet">    <title>Maja-Karin Fredriksson</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
